insert little  comment

--- a/docs/data_catalog/frontend/data_catalog_connections.mdx
+++ b/docs/data_catalog/frontend/data_catalog_connections.mdx
@@ -291,6 +291,10 @@ a success message will redirect you to the [Connection Overview](#connection-ove
   </div>
 </div>
 
+<!---
+INSERIRE INFO PER PUNTUALIZZARE CHE PER IL CRUD CONNECTION E' DISABLED
+-->
+
 ## Access Connection details
 
 After having created the connection, it is reachable inside the list of connections displayed in the Connection Panel.  
