Updated release note (#1819)
* Updated release note

* Update v13.4.0.md

--- a/docs/release-notes/v13.4.0.md
+++ b/docs/release-notes/v13.4.0.md
@@ -74,7 +74,8 @@ This version addressed the following bugs:
 * fixed a bug that made it impossible to change the type of a microservice environment variable from ‘Downward API’ to ‘Plain’;
 * fixed a bug that made impossible to create a template without Kustomize
 * fixed a bug that caused a wrong display of a company's cluster list has been corrected;
-* fixed an issue that caused infinite loading on refresh of the History section in the Deploy area.
+* fixed an issue that caused infinite loading on refresh of the History section in the Deploy area;
+* fixed a bug in Flow Manager configurator that forbade having events with the same name even if they were issued by different states.
 
 ## Fast Data
 
@@ -191,4 +192,4 @@ The new version `3.1.0` comes with a security fix which redacts sensitive header
 
 ## How to update your Console
 
-For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v13.8.0-beta.1`.
+For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v13.8.0-beta.3`.
