insert placeholders for images replacing

--- a/docs/data_catalog/frontend/data_catalog_assets.mdx
+++ b/docs/data_catalog/frontend/data_catalog_assets.mdx
@@ -21,6 +21,10 @@ Given the large cardinality of assets that can be retrieved on this tool (SoR, T
 
 Next to the search bar, the search context can be set to better circumscribe the search scope. For example, if the System of Records within which you want to perimeter the search results is already known, you can from the search context enter that specific SoR. All results returned from the search will be assets belonging to the context of that specific SoR. To refine the search scope even more, it is also possible from the context to select a table.
 
+<!---
+REPLACE IMAGE
+-->
+
 <div style={{display: 'flex', justifyContent: 'center'}}>
   <div style={{display: 'flex', width: '600px'}}>
 
@@ -60,6 +64,10 @@ To start a completely new search, users can easily click on the `Clear all` butt
 
 Once the searched asset is found among the search returned elements, click on it to enter its details page.  
 
+<!---
+REPLACE IMAGE
+-->
+
 ![Details of a table page](./../img/table_details_page.png)
 
 At the top of the page a bredcrumb helps users to easily understand the background structure of Data Catalog navigation patterns. In the example, user has entered the table `orders-details` detail page; from the breadcrumb it is noticeable that table `orders-details` belongs to System of Records `crud-books`.
@@ -75,7 +83,7 @@ Finally, at the bottom of Data Catalog homepage, the **Last Viewed** section sho
 ### SoR detail page
 
 <!---
-MODIFICARE IMMAGINE
+REPLACE IMAGE
 -->
 
 The SoR detail page shows the following two tabs:
@@ -88,7 +96,7 @@ The SoR detail page shows the following two tabs:
 ### Table detail page
 
 <!---
-MODIFICARE IMMAGINE
+REPLACE IMAGE
 -->
 
 The Table detail page shows the following two tabs:
@@ -111,6 +119,10 @@ The Column detail page shows a first **Details** section with asset details such
 ## Custom Properties Management
 
 One of the core features of Mia-Platform Data Catalog is the full management of custom properties for metadata enrichment on assets.
+
+<!---
+REPLACE IMAGE
+-->
 
 ![Custom properties management page](./../img/custom_properties_management_page.png)
 
