--- a/docs/data_catalog/frontend/data_catalog_connections.mdx
+++ b/docs/data_catalog/frontend/data_catalog_connections.mdx
@@ -11,7 +11,7 @@ Connections represent the source of truth of the Data Catalog. By retrieving the
 to perform actions such as [Asset Discovery](/data_catalog/frontend/data_catalog_assets.mdx) and [Lineage](/data_catalog/frontend/data_lineage.mdx).
 
 <!---
-UPDATE IMAGE
+REPLACE IMAGE
 -->
 
 <div style={{display: 'flex', justifyContent: 'center'}}>
@@ -66,6 +66,10 @@ Since a connection requires usually to provide sensible information (such as pas
 ## Create a Connection
 
 By clicking on the `Create Connection` button, users are guided through a creation wizard that defines the parameters to properly establish a connection.
+
+<!---
+REPLACE IMAGE
+-->
 
 <div style={{display: 'flex', justifyContent: 'center'}}>
   <div style={{display: 'flex', width: '100%'}}>
@@ -241,6 +245,10 @@ The required information to setup the connection are:
 Additionally, it is possible to define the project and the environment where the CRUD Service is located in a Mia Platform Project
 by choosing a Company.
 
+<!---
+REPLACE IMAGE
+-->
+
 <div style={{display: 'flex', justifyContent: 'center'}}>
   <div style={{display: 'flex', width: '100%'}}>
 
@@ -318,7 +326,7 @@ From the menu button on the top-right corner of the page, it is possible to clic
 and start the procedure to remove a connection from the Data Catalog.
 
 <!---
-UPDATE IMAGE
+REPLACE IMAGE
 -->
 
 <div style={{display: 'flex', justifyContent: 'center'}}>
@@ -342,7 +350,7 @@ In the overview of the Connections Panel where all available connections are lis
 Once the action has been executed, the table entry of that connection will be accordingly updated by the Job Runner with information about the triggered job status. 
 
 <!---
-UPDATE IMAGE
+REPLACE IMAGE
 -->
 
 <div style={{display: 'flex', justifyContent: 'center'}}>
@@ -356,7 +364,7 @@ UPDATE IMAGE
 Once the _[Agent Dataset Scan Job](/data_catalog/data_catalog_job_runner.mdx#agent-dataset-scan)_ is completed, a _[Data Catalog Sync Job](/data_catalog/data_catalog_job_runner.mdx#data-catalog-sync)_ will be executed automatically to store the assets retrieved from the data source into the Data Catalog.  
 
 <!---
-UPDATE IMAGE
+REPLACE IMAGE
 -->
 
 <div style={{display: 'flex', justifyContent: 'center'}}>
@@ -371,7 +379,7 @@ Only one connection at a time will perform the synchronization: If more than one
 the ones that are still not executed will be in a `Queue` state.
 
 <!---
-UPDATE IMAGE
+REPLACE IMAGE
 -->
 
 <div style={{display: 'flex', justifyContent: 'center'}}>
@@ -386,7 +394,7 @@ UPDATE IMAGE
 Once the synchronization has been completed, user has evidence about the Job completion. Moreover, it is possible to have evidence of the last sync time.
 
 <!---
-UPDATE IMAGE
+REPLACE IMAGE
 -->
 
 <div style={{display: 'flex', justifyContent: 'center'}}>
@@ -401,7 +409,7 @@ UPDATE IMAGE
 If an error occurs during the process, it will be possible to access the Job Runner logs to better inspecting the causes of the failure.
 
 <!---
-UPDATE IMAGE
+REPLACE IMAGE
 -->
 
 <div style={{display: 'flex', justifyContent: 'center'}}>
