--- a/docs/data_catalog/frontend/overview.mdx
+++ b/docs/data_catalog/frontend/overview.mdx
@@ -12,6 +12,10 @@ AGGIUNGERE REDIRECT
 Data Catalog frontend communicates with [Open Lineage](/data_catalog/data_catalog_open_lineage.mdx) backend
 via [Fabric BFF](/data_catalog/data_catalog_fabric_bff.mdx) component.
 
+<!---
+REPLACE IMAGE
+-->
+
 ![Data Catalog embedded in Console](./../img/data_catalog_in_console.png)
 
 ## Features
