--- a/docs/data_catalog/overview.mdx
+++ b/docs/data_catalog/overview.mdx
@@ -33,6 +33,10 @@ Many are the challenges that companies have to deal with every day:
 In order to help companies solve all these challenges, we offer **Mia-Platform Data Catalog**, a core component of Mia-Platform suite and a powerful tool for the Data Governance.  
 With Mia-Platform, it is possible to take advantage of the synergies with [**Fast Data**](/fast_data/what_is_fast_data.md) product, paving the way to the implementation of a Data Fabric solution. 
 
+<!---
+REPLACE IMAGE
+-->
+
 ![Data Catalog UI](./img/data_catalog_home.png)
 
 ### Key features
@@ -126,7 +130,7 @@ and decision-making capabilities within the organization.
 ## Architecture
 
 <!---
-AGGIORNARE
+REPLACE IMAGE
 -->
 
 In the diagram below is shown how the services involved in the aforementioned Marketplace components are linked together. In particular, the Data Catalog FE connects with the Open Lineage service via REST APIs to retrieve
