--- a/docs/data_catalog/frontend/data_catalog_assets.mdx
+++ b/docs/data_catalog/frontend/data_catalog_assets.mdx
@@ -5,7 +5,7 @@ sidebar_label: Asset Discovery
 ---
 
 <!---
-AGGIUNGERE REDIRECT
+INSERT REDIRECT
 -->
 
 When accessing Data Catalog frontend, user lands to the home section of the Data Catalog, where there is a searchbar that represents the starting point to navigate among Data Catalog assets.
@@ -276,5 +276,5 @@ A modal opens showing the number and type of assets selected (SoR, table, column
 In particular, for each selected field, the user can choose to clear the field value on all those selected assets, or to overwrite the any already existent value with a new one set by the user during the bulk edit flow.
 
 <!---
-Inserire asset virtuali + menzione al lineage 
+Insert virtual assets and mentioning lineage 
 -->
