--- a/docs/data_catalog/frontend/data_catalog_connections.mdx
+++ b/docs/data_catalog/frontend/data_catalog_connections.mdx
@@ -310,7 +310,7 @@ a success message will redirect you to the [Connection Overview](#connection-ove
 ## Access Connection details
 
 After having created the connection, it is reachable inside the list of connections displayed in the Connection Panel.  
-Then it is possible to access its Details pege.
+Then it is possible to access its Details page.
 
 <div style={{display: 'flex', justifyContent: 'center'}}>
   <div style={{display: 'flex', width: '100%'}}>
