--- a/docs/data_catalog/frontend/data_lineage.mdx
+++ b/docs/data_catalog/frontend/data_lineage.mdx
@@ -56,7 +56,7 @@ For each Real Job, users can inspect a detailed view that includes the job produ
 
 :::info
 In case you have Fast-Data Projects adopting our [Mia-Platform Fast Data runtime solution](/fast_data/runtime_management/overview.mdx), it is possible to automatically retrieve and show inside the Data Lineage all the aggregation processes configured in order to populate and expose your Fast Data Single Views.  
-To know more about how to get all the Fast Data runtime information coming from the data pipelines of your Fast Data Projects, please refer to the [related documentation](/data_catalog/data_catalog_job_runner.mdxfast-data-jobs-sync).
+To know more about how to get all the Fast Data runtime information coming from the data pipelines of your Fast Data Projects, please refer to the [related documentation](/data_catalog/data_catalog_job_runner.mdx#fast-data-jobs-sync).
 :::
 
 **Virtual Jobs**, on the other hand, are fully customizable and can be created, modified, or deleted directly within the canvas. These jobs allow users to model planned transformations or describe physically relationships still not retrived inside Data Catalog. 
