--- a/docs/data_catalog/data_catalog_job_runner.mdx
+++ b/docs/data_catalog/data_catalog_job_runner.mdx
@@ -510,7 +510,7 @@ A [Data Catalog Agent][data-catalog-agent] connection is a key/value pair
 }
 ```
 
-and the [Connections UI](./frontend/data_catalog_connections.mdx) maps the `key` to the connection's `name` while the rest of the configuration is identical in case of a connection string.
+and the [Connections UI](/data_catalog/frontend/data_catalog_connections.mdx) maps the `key` to the connection's `name` while the rest of the configuration is identical in case of a connection string.
 
 When not using connection strings but [Data Catalog Agent][data-catalog-agent] custom, per-vendor, configuration, the connection string must be extracted from those parameters.
 
